Fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,7 @@ footer {
     margin: 0;
     padding: 0;
     list-style-type: none;
+    text-align: center;
 }
 
 .demos li {
